build-server/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-server-mysql
spec:
  type: ClusterIP
  selector:
    app: build-server-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
